fix: align adjusment

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -64,7 +64,7 @@ select {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 20px;
+    padding: 15px 20px;
     margin: 0 0 20px;
     border-radius: 8px;
     background: $light-green;
@@ -81,7 +81,7 @@ select {
 
     .form__field {
         width: 100%;
-        padding: 10px;
+        padding: 10px 75px 10px 10px;
         border: 0;
     }
 
@@ -350,7 +350,7 @@ select {
         .card__content {
             .prices {
                 flex-direction: row;
-                align-items: center;
+                align-items: flex-end;
                 gap: 10px;
 
                 * {
@@ -368,6 +368,10 @@ select {
         max-width: 980px;
         flex-direction: row;
         margin: 0 auto;
+
+        .text {
+            text-align: left;
+        }
     }
 
     .mail__container {
